--- a/step4-destructuring.html
+++ b/step4-destructuring.html
@@ -46,6 +46,21 @@ let { title , fname, lname, city } = hero;
 console.log(htitle, hcity, hfname, hlname);
 console.log(title, city, fname, lname);
 
+let heroes = ["Batman", "Superman", "Ironman"];
+let [firsthero, secondhero, thirdhero] = heroes;
+console.log(firsthero);
+console.log(secondhero);
+console.log(thirdhero);
+
+let hero1 = "Spiderman";
+let hero2 = "Phantom";
+let hero3 = "Hulk";
+
+let [h1, h2, h3] = [hero1, hero2, hero3];
+console.log(h1, h2, h3);
+console.log("*************************")
+// let arr = [hero1, hero2, hero3];
+// console.log(arr)
     </script>
 </head>
 <body>
